# LuminoStudio

./: .gitignore  .gitmodules  CMakeLists.txt  Configure.bat  LuminoStudio.sln  README.md  main.cpp
Engine/: Configure.bat  LuminoStudio.sln
Engine/LuminoStudio/: App.xaml  App.xaml.cs  LuminoStudio.csproj  LuminoStudio.sln  packages.config
Engine/LuminoStudio/LuminoStudio/: App.xaml  App.xaml.cs  LuminoStudio.csproj  packages.config
Engine/LuminoStudio/LuminoStudio/Models/: Model.cs
Engine/LuminoStudio/LuminoStudio/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
Engine/LuminoStudio/LuminoStudio/ViewModels/: MainWindowViewModel.cs  ProjectCreationWindowViewModel.cs
Engine/LuminoStudio/LuminoStudio/Views/: LuminoFrameWindowHost.cs  LuminoSwapChainHost.cs  MainWindow.xaml  MainWindow.xaml.cs  ProjectCreationWindow.xaml  ProjectCreationWindow.xaml.cs
Engine/LuminoStudio/LuminoWpfSlate/: LuminoWpfSlate.csproj
Engine/LuminoStudio/LuminoWpfSlate/Mvvm/: DialogViewModel.cs
Engine/LuminoStudio/Models/: Project.cs  Workspace.cs
Engine/LuminoStudio/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Engine/LuminoStudio/ViewModels/: MainWindowViewModel.cs  ProjectCreationWindowViewModel.cs
Engine/LuminoStudio/ViewModels/Documents/: DocumentViewModelBase.cs  ProjectSettingDocumentViewModel.cs
Engine/LuminoStudio/ViewModels/Panes/: OutputPaneViewModel.cs  PaneViewModelBase.cs  ResourceManagerPaneViewModel.cs
Engine/LuminoStudio/Views/: Common.xaml  MainWindow.xaml  MainWindow.xaml.cs  ProjectCreationWindow.xaml  ProjectCreationWindow.xaml.cs
Engine/LuminoStudio/Views/Documents/: ProjectSettingDocument.xaml  ProjectSettingDocument.xaml.cs
Engine/LuminoStudio/Views/Helpers/: LayoutInitializer.cs  LayoutItemContainerStyleSelector.cs  LayoutItemTemplateSelector.cs
Engine/LuminoStudio/Views/Panes/: OutputPane.xaml  OutputPane.xaml.cs  ResourceManagerPane.xaml  ResourceManagerPane.xaml.cs
Engine/LuminoStudio/Views/Themes/: DockingWindows.cs  DockingWindowsBrushes.xaml
Engine/LuminoStudioCore/: Class1.cs  GenrePreset.cs  LuminoStudioCore.csproj  Project.cs
Engine/LuminoStudioCore/Properties/: AssemblyInfo.cs
Engine/LuminoWpfSlate/: Class1.cs  packages.config
Engine/LuminoWpfSlate/Controls/: CallMethodButton.cs
Engine/LuminoWpfSlate/Mvvm/: DialogViewModel.cs
Engine/LuminoWpfSlate/Properties/: AssemblyInfo.cs
Engine/SimpleAADVGameGenre/: PluginInfo.cs  SimpleAADVGameGenre.cs  SimpleAADVGameGenre.csproj
Engine/SimpleAADVGameGenre/Properties/: AssemblyInfo.cs
LuminoStudio/: Common.props  LuminoStudio.vcxproj  LuminoStudio.vcxproj.filters  luminostudio.cpp  luminostudio.h  luminostudio.ui  main.cpp
LuminoStudio/GeneratedFiles/: qrc_luminostudio.cpp  ui_luminostudio.h
src/: LuminoDockWidget.cpp  LuminoDockWidget.h  LuminoStudio.PCH.cpp  LuminoStudio.PCH.h  LuminoViewWidget.cpp  LuminoViewWidget.h  MainWindow.cpp  MainWindow.h  NewProjectDialog.cpp  NewProjectDialog.h  NewProjectDialog.ui  QtHelper.cpp  QtHelper.h  luminostudio.cpp  luminostudio.h  luminostudio.qrc  main.cpp
src/Core/: EditorCore.cpp  EditorCore.h  EditorInterface.cpp  EditorInterface.h  Project.cpp  Project.h  ProjectLibrary.cpp  ProjectLibrary.h
src/HC1/: HC1ProjectLibrary.cpp  HC1ProjectLibrary.h
